# transcribe-videos

./: README.md  pyproject.toml  setup.py
src/: __init__.py  alignment.py  api.py  audio_utils.py  checkcuda.py  config.py  core.py  diarizer.py  file_manager.py  git_utils.py  output_utils.py  requirements.txt  resource_manager.py  simple_transcribe.py  transcribe_meeting_script.py  transcriber.py
tests/: test_alignment.py  test_api.py  test_audio_utils.py  test_checkcuda.py  test_config.py  test_diarizer.py  test_file_manager.py  test_git_utils.py  test_output_utils.py  test_resource_manager.py  test_transcribe_meeting.py  test_transcriber.py
